Profile Picture Upload (#152)
* Update typings

* Update promotional page

* Upload Form

* bump version

* Display error

* Fix linting errors

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -140,6 +140,7 @@
 
 <mat-menu #personalMenu="matMenu">
 	<button mat-menu-item [routerLink]="['/users', clientService.id]">VIEW PROFILE</button>
+	<button mat-menu-item (click)="uploadCustomAvatar()" *ngIf="canUploadCustomAvatar() | async">CHANGE AVATAR</button>
 	<button mat-menu-item (click)="clientService.logout()">
 		LOG OUT
 	</button>
