--- a/src/app/store/store-subscribe/store-subscribe.component.html
+++ b/src/app/store/store-subscribe/store-subscribe.component.html
@@ -2,6 +2,6 @@
 	
 	<!-- Subscriptions  -->
 	<div class="product">
-		<app-store-subscribe-promotion></app-store-subscribe-promotion>
+		<app-store-subscribe-promotion [subscription]="subscription"></app-store-subscribe-promotion>
 	</div>
 </div>
