--- a/src/app/store/store.component.scss
+++ b/src/app/store/store.component.scss
@@ -86,6 +86,12 @@ $logosize: 18vw;
 				user-select: none;
 				cursor: pointer;
 				color: rgb(200, 80, 80);
+				margin-bottom: 0.5em;
+			}
+			.update-text-btn {
+				user-select: none;
+				cursor: pointer;
+				color: rgb(80, 140, 200);
 			}
 		}
 
