--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 		</mat-icon>
 		<div class="icon-fill"></div>
 		<span class="news-info">
-			7TV is now available for YouTube!
+			7TV is also on YouTube
 			<a href="/link-youtube" (click)="$event.preventDefault()" [routerLink]="['/link-youtube']" *ngIf="(clientService.getYouTubeID() | async) === null">
 				Link your channel
 			</a>
@@ -20,7 +20,7 @@
 					<div class="logo-wrapper">
 						<object data="assets/brand/7tv-light.svg" height="{{logoSize}}" type="image/svg+xml"></object>
 					</div>
-				</div>	
+				</div>
 
 				<div class="slogan-container">
 					<h1 class="slogan-text">
@@ -86,11 +86,11 @@
 
 				<!-- Render Platform Icons -->
 				<div *ngFor="let icon of browserIcons">
-					<div class="browser-icon my-2">	
+					<div class="browser-icon my-2">
 						<div class="tag" [class.new]="icon.tag?.new" [appColor]="icon.tag?.color" [isBackground]="icon.tag?.new || true">
 							<span>{{icon.tag?.label}}</span>
 						</div>
-		
+
 						<a [@browserIcon]
 							matRipple
 							[matRippleCentered]="true"
@@ -98,7 +98,7 @@
 							[matRippleRadius]="8 * 6"
 							[class.disabled]="icon.disabled"
 							class="icon d-flex align-items-center unstyled-link"
-							[matTooltip]="icon.tooltip || ''" 
+							[matTooltip]="icon.tooltip || ''"
 							[href]="icon.href ? icon.href : ''"
 							[ngSwitch]="icon.svgIcon"
 						>
