--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -56,6 +56,16 @@
 
 	<!-- Small Buttons -->
 	<div class="align-items-center flex-grow-0 d-inline-flex h-100">
+		<div class="d-flex mr-2">
+			<button mat-icon-button matTooltip="Wardrobe (Select Cosmetics)"
+				[style.Color]="themingService.colors.app_subscriber"
+				(click)="openWardrobe()"
+				*ngIf="clientService.isAuthenticated() | async"
+			>
+				<mat-icon>checkroom</mat-icon>
+			</button>
+		</div>
+
 		<div class="d-flex mr-2" *ngIf="clientService.isAuthenticated() | async">
 			<app-notify-button (click)="openNotifyMenu()" matTooltip="Notifications"></app-notify-button>
 		</div>
@@ -70,7 +80,7 @@
 			</button>
 		</div>
 
-		<div class="h-100 d-none d-md-block" [ngSwitch]="clientService.isAuthenticated() | async">
+		<div class="ml-3 h-100 d-none d-md-block" [ngSwitch]="clientService.isAuthenticated() | async">
 			<!-- Login Button -->
 			<span class="h-100 login-button" *ngSwitchCase="false">
 				<app-twitch-button *ngSwitchCase="false"></app-twitch-button>
