--- a/src/app/store/store-subscribe/subscribe-promotion.component.html
+++ b/src/app/store/store-subscribe/subscribe-promotion.component.html
@@ -1,6 +1,40 @@
 <div class="promotion">
+	<div class="test"></div>
 	<div class="promotional-content" [appColor]="themingService.bg.darken(.1)" [isBackground]="true">
 		<div class="perks-list">
+			<!-- Perk: Paints -->
+			<div class="perk has-divider perk-paints">
+				<span class="perk-title">
+					<div >
+						<span>Nametag Paints</span>
+						<span *ngTemplateOutlet="isNewPerk"></span>
+						<span *ngTemplateOutlet="isLimitedPerk"></span>
+					</div>
+
+					<p class="perk-description">
+						<span [style.color]="'red'" class="mr-1">Christmas Special!</span>
+						<span>
+							Subscribe between December 23 through December 31st and acquire
+							the exclusive
+							<span paint="candy-cane">Candy Cane</span>,
+							<span paint="tinsel">Tinsel</span> and
+							<span paint="ice-and-snow">Ice & Snow</span>
+							paints
+							for your username in Twitch Chat & 7tv.app
+
+							<p [ngStyle]="{ fontStyle: 'italic', marginTop: '0.25em' }">
+								Visible for users on Chrome & Firefox with the 7TV Extension
+							</p>
+						</span>
+					</p>
+				</span>
+
+
+				<div>
+					<span class="paint-preview"> {{ (clientService.getUsername() | async) || 'YourUsername' }} </span>
+				</div>
+			</div>
+
 			<!-- Perk: Badge -->
 			<div class="perk has-divider perk-badge">
 				<span class="perk-title">
@@ -20,7 +54,6 @@
 				<span class="perk-title">
 					<div>
 						<span>Animated Profile Picture</span>
-						<span *ngTemplateOutlet="isNewPerk"></span>
 					</div>
 
 					<p class="perk-description">
@@ -98,5 +131,11 @@
 <ng-template #isNewPerk>
 	<span class="perk-is-new">
 		NEW!
+	</span>
+</ng-template>
+
+<ng-template #isLimitedPerk>
+	<span class="perk-is-limited">
+		LIMITED!
 	</span>
 </ng-template>
