--- a/src/app/store/store-subscribe/subscribe-promotion.component.scss
+++ b/src/app/store/store-subscribe/subscribe-promotion.component.scss
@@ -31,11 +31,46 @@
 			&.coming-soon {
 				.perk-title {
 					color: gray;
-				}				
+				}
+			}
+
+			&.perk-paints {
+				.paint-preview {
+					font-size: 1.5em;
+					font-weight: 700;
+					animation: NametagGradientCarousel 3s infinite;
+					background-size: cover;
+					background-clip: text;
+					-webkit-background-clip: text;
+					filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.3));
+					-webkit-text-fill-color: transparent;
+				}
+
+				> .perk-title > .perk-description {
+					[paint] {
+						font-weight: 700;
+						background-size: cover;
+						background-clip: text;
+						-webkit-background-clip: text;
+						-webkit-text-fill-color: transparent;
+						filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.3));
+
+						&[paint="candy-cane"] {
+							background-image: repeating-linear-gradient(45deg, white 10%, white 20%, rgb(255, 100, 100) 20%, rgb(255, 100, 100) 30%);
+						}
+						&[paint="tinsel"] {
+							background-image: linear-gradient(30deg, rgb(20, 230, 80), rgb(20, 230, 80) 10%, #ff513a 70%, #F8B229 90%);
+						}
+						&[paint="ice-and-snow"] {
+							background-image: radial-gradient(circle, #53bcca 20%, #2edcf3, #3f6de9 40%, #eeeeee 80%);
+						}
+					}
+				}
 			}
 		}
 
 		.perk .perk-title {
+			z-index: 5;
 			display: flex;
 			flex-direction: column;
 			font-family: 'Metrophobic', sans-serif;
@@ -77,7 +112,18 @@
 
 .perk-is-new {
 	background-color: rgb(66, 186, 66);
-	border-radius: 1em;
+	border-radius: 0.3em;
+	margin-top: 0.25em;
+	margin-left: 0.5em;
+	padding: 0.1em;
+	padding-right: 0.3em;
+	font-size: 0.75em;
+	width: min-content;
+}
+
+.perk-is-limited {
+	background-color: rgb(141, 26, 218);
+	border-radius: 0.3em;
 	margin-top: 0.25em;
 	margin-left: 0.5em;
 	padding: 0.1em;
@@ -113,5 +159,21 @@
 				transform: translate(-50%, -50%);
 			}
 		}
+	}
+}
+
+@keyframes NametagGradientCarousel {
+	0% {
+		background-image: repeating-linear-gradient(45deg, white 10%, white 20%, rgb(255, 100, 100) 20%, rgb(255, 100, 100) 30%);
+	}
+	25% {
+		background-image: repeating-linear-gradient(45deg, white 10%, white 20%, rgb(255, 100, 100) 20%, rgb(255, 100, 100) 30%);
+	}
+	50% {
+		opacity: 1;
+		background-image: linear-gradient(30deg, rgb(20, 230, 80), rgb(20, 230, 80) 10%, #ff513a 70%, #F8B229 90%);
+	}
+	100% {
+		background-image: radial-gradient(circle, #53bcca 20%, #2edcf3, #3f6de9 40%, #eeeeee 80%);
 	}
 }
