Display discount % in navbar

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -30,7 +30,11 @@
 				[class.disabled]="btn.conditionOnlyDisables && (btn.condition | async) !== true"
 				*ngIf="btn.conditionOnlyDisables || (!btn.condition || (btn.condition | async))"
 			>
-
+				<div class="subscribe-discount" *ngIf="btn.name === 'subscribe'">
+					<div>
+						<span>-25%</span>
+					</div>
+				</div>
 				<!-- Icon -->
 				<div [ngSwitch]="btn.svg" class="_icon" [appColor]="btn.color">
 					<mat-icon class=" d-flex align-self-center" *ngSwitchDefault [matTooltip]="viewportService.isSmallerThan('sm') ? btn.name : ''">
