--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -88,6 +88,27 @@
 			}
 		}
 
+		.subscribe-discount {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+
+			> div {
+				position: relative;
+				top: 3.25em;
+				display: flex;
+				justify-content: center;
+				width: 100%;
+				font-size: 0.85rem;
+				line-height: 0;
+				> span {
+					border-radius: 0.3em;
+					height: 1em;
+					padding: 0.5em;
+					background-image: linear-gradient(20deg, rgb(30, 150, 20), rgb(180, 45, 45));
+				}
+			}
+		}
 	}
 }
 
