--- a/src/app/store/store-subscribe/subscribe-promotion.component.html
+++ b/src/app/store/store-subscribe/subscribe-promotion.component.html
@@ -12,14 +12,12 @@
 					</div>
 
 					<p class="perk-description">
-						<span [style.color]="'red'" class="mr-1">Christmas Special!</span>
+						<span [style.color]="'white'" [style.font-weight]="'900'" class="mr-1">New Year Special!</span>
 						<span>
-							Subscribe between December 23 through December 31st and acquire
+							Subscribe before January 7th and acquire
 							the exclusive
-							<span paint="candy-cane">Candy Cane</span>,
-							<span paint="tinsel">Tinsel</span> and
-							<span paint="ice-and-snow">Ice & Snow</span>
-							paints
+							<span paint="festive-gold">Festive Gold</span>
+							paint
 							for your username in Twitch Chat & 7tv.app
 
 							<p [ngStyle]="{ fontStyle: 'italic', marginTop: '0.25em' }">
