--- a/src/app/store/store.component.scss
+++ b/src/app/store/store.component.scss
@@ -155,7 +155,7 @@ $logosize: 18vw;
 		width: 200%;
 		transform: rotate(-2deg);
 
-		background: linear-gradient(-22.5deg, #f74747b4 40%, #21882f 50%, #f74747b4 80%);
+		background: linear-gradient(-22.5deg, #d7b030  40%, #fff7b6  50%, #d7b030  80%);
 		background-size: 400% 400%;
 		animation: gradient 6s ease-in-out infinite;
 
