--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -28,12 +28,11 @@
 	}
 
 	._dev-stage-text {
-		width: 0;
 		position: relative;
 		color: rgb(111, 111, 111);
 		font-size: 8.8px;
 		bottom: -18px;
-		left: -60%;
+		left: -50%;
 		font-family: 'Work Sans', sans-serif;
 		font-weight: 600;
 
@@ -42,6 +41,15 @@
 			bottom: 14px;
 			left: -100%;
 			font-weight: 600;
+		}
+
+		&.ny-h {
+			background-size: cover;
+			-webkit-background-clip: text;
+			background-clip: text;
+			-webkit-text-fill-color: transparent;
+			background-image: radial-gradient(circle, #d7b030 0%, #fff7b6 100%);
+			filter: drop-shadow(0 0 2px rgb(120, 120, 120));
 		}
 	}
 }
@@ -84,28 +92,6 @@
 					height: 1px;
 					width: 100px;
 					background-color: white;
-				}
-			}
-		}
-
-		.subscribe-discount {
-			position: absolute;
-			width: 100%;
-			height: 100%;
-
-			> div {
-				position: relative;
-				top: 3.25em;
-				display: flex;
-				justify-content: center;
-				width: 100%;
-				font-size: 0.85rem;
-				line-height: 0;
-				> span {
-					border-radius: 0.3em;
-					height: 1em;
-					padding: 0.5em;
-					background-image: linear-gradient(20deg, rgb(30, 150, 20), rgb(180, 45, 45));
 				}
 			}
 		}
