Update subscribe page

--- a/src/app/store/store-subscribe/subscribe-promotion.component.html
+++ b/src/app/store/store-subscribe/subscribe-promotion.component.html
@@ -8,17 +8,13 @@
 					<div >
 						<span>Nametag Paints</span>
 						<span *ngTemplateOutlet="isNewPerk"></span>
-						<span *ngTemplateOutlet="isLimitedPerk"></span>
 					</div>
 
 					<p class="perk-description">
-						<span [style.color]="'white'" [style.font-weight]="'900'" class="mr-1">New Year Special!</span>
 						<span>
-							Subscribe before January 7th and acquire
-							the exclusive
-							<span paint="festive-gold">Festive Gold</span>
-							paint
-							for your username in Twitch Chat & 7tv.app
+							Acquire new unique paints for your username in Twitch Chat. In January, subscribers get the
+							<span paint="sunset">Sunset</span>, <span paint="soft-fire">Soft Fire</span> and <span paint="shallow-sea">Shallow Sea</span> paints.
+
 
 							<p [ngStyle]="{ fontStyle: 'italic', marginTop: '0.25em' }">
 								Visible for users on Chrome & Firefox with the 7TV Extension
