Added message to show maximum file size (#227)
* Added message to show maximum file size

* Update emote-create.component.html

--- a/src/app/emotes/emote-create/emote-create.component.html
+++ b/src/app/emotes/emote-create/emote-create.component.html
@@ -72,6 +72,8 @@
 					<span>Resizing is done automatically</span>
 					<span>Image should be 128x128 or larger for best quality</span>
 					<span>Supported: PNG, JPEG, GIF. (WebP temporarily disabled)</span>
+					<span>File size must be less than 2.5 MB.</span>
+
 				</p>
 				<!-- Emote Upload Box -->
 				<div class="col-12 col-md-4 emote-upload-box">
