Update "gold nametag" on sub page

--- a/src/app/store/store-subscribe/subscribe-promotion.component.html
+++ b/src/app/store/store-subscribe/subscribe-promotion.component.html
@@ -83,9 +83,9 @@
 			<!-- Perk: Name Tag -->
 			<div class="perk has-divider">
 				<span class="perk-title">
-					Gold Name Tag Color
+					Subscriber Rank
 					<p class="perk-description">
-						On 7TV.APP and other affiliated services
+						On 7TV.APP
 					</p>
 				</span>
 			</div>
